--- a/environment.yml
+++ b/environment.yml
@@ -14,7 +14,7 @@ dependencies:
   - bwidget=1.9.14
   - bzip2=1.0.8
   - c-ares=1.34.3
-  - ca-certificates=2024.11.26
+  - ca-certificates
   - cairo=1.18.0
   - cctools_osx-arm64=1010.6
   - certifi=2024.8.30
@@ -332,8 +332,8 @@ dependencies:
   - zlib=1.3.1
   - zstandard=0.23.0
   - zstd=1.5.6
-  - topicmodels=0.2_16
-  - tm=0.7-15
-  - SnowballC=0.7.1
-  - lda=1.5.2
+ #  - topicmodels=0.2_16
+ #  - tm=0.7-15
+ #  - SnowballC=0.7.1
+ # - lda=1.5.2
 prefix: /Users/lolalic/miniconda3/envs/r-env
